--- a/Qdrant_Insertor/packages/backend/package.json
+++ b/Qdrant_Insertor/packages/backend/package.json
@@ -31,7 +31,7 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@eslint/js": "^9.34.0",
+    "@eslint/js": "^9.38.0",
     "@swc/core": "^1.13.5",
     "@swc/jest": "^0.2.39",
     "@types/better-sqlite3": "^7.6.13",
@@ -40,6 +40,9 @@
     "@types/mime-types": "^3.0.1",
     "@types/node": "^24.3.0",
     "@types/supertest": "^6.0.3",
+    "@eslint/eslintrc": "^3.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.41.0",
+    "@typescript-eslint/parser": "^8.41.0",
     "eslint": "^9.34.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
@@ -48,7 +51,6 @@
     "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.41.0"
+    "typescript": "^5.9.2"
   }
 }
