--- a/Qdrant_Insertor/packages/frontend/package.json
+++ b/Qdrant_Insertor/packages/frontend/package.json
@@ -24,12 +24,15 @@
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
+    "@eslint/js": "^9.38.0",
+    "@eslint/eslintrc": "^3.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.41.0",
+    "@typescript-eslint/parser": "^8.41.0",
     "@vitejs/plugin-react": "^4.0.0",
-    "eslint": "^8.38.0",
+    "eslint": "^9.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "globals": "^16.3.0",
     "prettier": "^3.6.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
